runtime/tests/cases/variables/errors/save_shadows_extern.bobbin
extern gold
save gold = 50

You have {gold} gold.
